Fix z-index syntaxis error

--- a/banner.css
+++ b/banner.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    zIndex: 9000;
+    z-index: 9000;
 }
 
 .banner-wrapper {
@@ -13,7 +13,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    zIndex: 10000;
 }
 
 .banner-close {
@@ -23,5 +22,5 @@
     cursor: pointer;
     top: 15px;
     right: 15px;
-    zIndex: 10001;
+    z-index: 10001;
 }
